src/cmd/go/testdata/script/list_err_stack.txt
env GO111MODULE=off

# golang.org/issue/40544: regression in error stacks for parse errors

cd sandbox/foo
go list -e -json .
stdout '"sandbox/foo"'
stdout '"sandbox/bar"'
stdout '"Pos": "../bar/bar.go:1:1"'
stdout '"Err": "expected ''package'', found ackage"'

-- sandbox/foo/foo.go --
package pkg

import "sandbox/bar"
-- sandbox/bar/bar.go --
ackage bar